--- a/wine_classification.ipynb
+++ b/wine_classification.ipynb
@@ -279,18 +279,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.9722222222222222"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 53
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy :  0.9722222222222222\nPrecision :  0.9814814814814815\n"
+     ]
     }
    ],
    "source": [
@@ -304,15 +301,14 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "accuracy"
+    "print(\"Accuracy : \", accuracy)\n",
+    "\n",
+    "\n",
+    "from sklearn.metrics import precision_score\n",
+    "\n",
+    "precision = precision_score(y_test, y_pred, average='macro')\n",
+    "print(\"Precision : \", precision)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
